--- a/app/ems/ui5-deploy.yaml
+++ b/app/ems/ui5-deploy.yaml
@@ -16,7 +16,7 @@ builder:
     - name: ui5-task-zipper
       afterTask: generateCachebusterInfo
       configuration:
-        archiveName: ems
+        archiveName: emsjava
         relativePaths: true
         additionalFiles:
           - xs-app.json
