--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "license": "ISC",
   "repository": "<Add your repository here>",
   "devDependencies": {
-    "@sap/cds-dk": "^8",
     "@sap/cds": "^8",
-    "rimraf": "^5.0.5",
-    "mbt": "^1.2.29"
+    "@sap/cds-dk": "^8",
+    "mbt": "^1.2.29",
+    "rimraf": "^5.0.5"
   },
   "scripts": {
     "undeploy": "cf undeploy OJTJAVA --delete-services --delete-service-keys --delete-service-brokers",
